continue the skeleton and style of the project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<h1>Movie browser</h1>
-<input type="text">
+<div class="header">
+    <h1>Movie browser</h1>
+    <input type="text" id="searchbar" placeholder="Search for a movie" />
+</div>
 
-<app-movie-list></app-movie-list>
+<div class="body">
+    <app-movie-list></app-movie-list>
+</div>
