--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-  <div class="card-body">
+<div class="movie-list">
+  <div class="movie-list-body">
     <ng-container *ngFor="let j of [1,2,3,4]">
     <div class="row">
         <ng-container *ngFor="let i of [1,2,3,4]">
