--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,4 +1,7 @@
-.card {
+.movie {
     width: 250px;
     height: 300px;
+    border: 1px solid #000;
+    border-radius: 10px;
+    background-color: #ff0000;
 }
