--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #222;
+    font: 13px Verdana, Geneva, sans-serif;
+}
+
+h1 {
+    color: #ccc;
+}
+
+input {
+    background-color: #ccc;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+app-root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
