--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,13 @@
 app-movie-list {
-    width: 99%;
+    width: 98.5%;
 }
 
 .body {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     height: 70%;
+    width: 100%;
 }
 
 .header {
