--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,7 +1,20 @@
 .movie {
     width: 250px;
+    height: 350px;
+}
+
+.movie-poster {
+    width: 250px;
     height: 300px;
-    border: 1px solid #000;
     border-radius: 10px;
-    background-color: #ff0000;
+    background-size: cover;
+    background-position: center;
+}
+
+.movie-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    text-align: center;
 }
