--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,4 +1,6 @@
 <div class="movie">
-  <div class="movie-body">
+  <img src="https://image.tmdb.org/t/p/original{{ posterPath }}" alt="{{ title }}" class="movie-poster">
+  <div class="movie-title">
+    <h5>{{ title }}</h5>
   </div>
 </div>
