--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,21 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <form>
+                <form (ngSubmit)="onSearch()">
                     <div class="input-group mb-3">
-                        <select class="form-select" style="max-width: 150px;">
-                                <option selected>All Categories</option>
-                                <option value="1">Category 1</option>
-                                <option value="2">Category 2</option>
-                                <option value="3">Category 3</option>
-                            </select>
-                        <input type="text" class="form-control" placeholder="Search...">
+                        <select class="form-select" style="max-width: 150px">
+                            <option selected>All Categories</option>
+                            <option value="1">Category 1</option>
+                            <option value="2">Category 2</option>
+                            <option value="3">Category 3</option>
+                        </select>
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Search..."
+                            [(ngModel)]="searchText"
+                            name="search"
+                        />
                         <button class="btn btn-primary" type="submit">Search</button>
                     </div>
                 </form>
