--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -1,6 +1,7 @@
 .row {
     display: flex;
     flex-direction: row;
+    padding-top: 2%;
     padding-bottom: 2%;
     justify-content: space-around;
 }
@@ -15,6 +16,5 @@ app-movie {
 .movie-list {
     display: flex;
     flex-direction: column;
-    border: 1px solid #000;
-    border-radius: 10px;
+    background-color: #292727;
 }
