fix(app): fix some bugs when the code was merged

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           >
             Search
           </button>
-          <button class="btn_filters filter-btn" type="button">
+          <button class="btn_filters filter-btn" type="button" (click)="handleClick()">
             <i class="bi bi-funnel"></i> Filters +
           </button>
         </div>
