--- a/src/app/movie-detail-overlay/movie-detail-overlay.component.html
+++ b/src/app/movie-detail-overlay/movie-detail-overlay.component.html
@@ -9,7 +9,7 @@
                 [src]="
                     movie.poster_path
                         ? 'https://image.tmdb.org/t/p/w500' + movie.poster_path
-                        : 'assets/placeholder-poster.png'
+                        : '/assets/placeholder-poster.png'
                 "
                 [alt]="movie.title || 'NA'"
             />
@@ -34,6 +34,31 @@
                     {{ movie.overview && movie.overview.trim() ? movie.overview : 'NA' }}
                 </p>
             </div>
+        </div>
+
+        <!-- Cast Carousel -->
+        <div class="cast-section">
+            <h2 class="cast-label">Cast</h2>
+            <div *ngIf="cast.length > 0; else noCast" class="cast-list">
+                <div *ngFor="let actor of cast" class="cast-item">
+                    <img
+                        class="cast-photo"
+                        [src]="
+                            actor.profile_path
+                                ? 'https://image.tmdb.org/t/p/w185' + actor.profile_path
+                                : '/assets/placeholder-profile.png'
+                        "
+                        [alt]="actor.name || 'NA'"
+                    />
+                    <p class="actor-name">{{ actor.name || 'NA' }}</p>
+                    <p class="actor-character">
+                        {{ actor.character || 'NA' }}
+                    </p>
+                </div>
+            </div>
+            <ng-template #noCast>
+                <p class="no-cast">NA</p>
+            </ng-template>
         </div>
     </div>
 </div>
