add filters by years and alphabetical order for the discover part

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,12 +33,13 @@
     <div class="row justify-content-center" id="filters">
       <div class="col-md-6 all_filters">
         <select id="genre" class="form-select me-2 custom-select">
-          <option value="">All genres</option>
+          <option value="all">All genres</option>
           <option *ngFor="let genre of genres" [value]="genre.id">
             {{ genre.name }}
           </option>
         </select>
         <select id="yearSelect" class="form-select me-2 custom-select">
+          <option value="">All years</option>
           <option *ngFor="let year of years" [value]="year">
             {{ year }}
           </option>
@@ -48,8 +49,8 @@
           id="alphabeticSelect"
           class="form-select custom-select"
         >
-          <option value="">Alphabetical order</option>
-          <option value="">Reverse alphabetical order</option>
+          <option value="original_title.asc">Alphabetical order</option>
+          <option value="original_title.desc">Reverse alphabetical order</option>
         </select>
       </div>
     </div>
