fix(Searchbar): fix searchbar

--- a/src/app/movie-detail-overlay/movie-detail-overlay.component.html
+++ b/src/app/movie-detail-overlay/movie-detail-overlay.component.html
@@ -38,7 +38,7 @@
 
         <!-- Cast Carousel -->
         <div class="cast-section">
-            <h2 class="cast-label">Cast</h2>
+            <h2 class="overview-label">Cast</h2>
             <div *ngIf="cast.length > 0; else noCast" class="cast-list">
                 <div *ngFor="let actor of cast" class="cast-item">
                     <img
