--- a/src/app/movie-detail-overlay/movie-detail-overlay.component.html
+++ b/src/app/movie-detail-overlay/movie-detail-overlay.component.html
@@ -27,6 +27,9 @@
                     <span class="pill">
                         {{ movie.original_language ? (movie.original_language | uppercase) : 'NA' }}
                     </span>
+                    <span class="pill">
+                        {{ getGenreNames(movie.genre_ids, genres) }}
+                    </span>
                 </div>
 
                 <h2 class="overview-label">Overview</h2>
