--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 225px;
     height: 50px;
     text-align: center;
     padding: 0 0.5rem;
